--- a/app/src/main/res/layout/activity_hub.xml
+++ b/app/src/main/res/layout/activity_hub.xml
@@ -1,54 +1,58 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:gravity="center_horizontal">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:text="@string/my_nanodegree_apps"
-        android:layout_centerInParent="true"
-        android:layout_alignParentTop="true"
-        android:textColor="@android:color/black"
-        android:textSize="26sp"
-        android:layout_width="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:gravity="center_horizontal">
 
-
-    <Button
-        style="@style/buttons"
-        android:id="@+id/spotify_streamer"
-        android:text="@string/spotify_streamer"/>
-
-    <Button
-        style="@style/buttons"
-        android:id="@+id/scores_app"
-        android:text="@string/scores_app"/>
-
-    <Button
-        style="@style/buttons"
-        android:id="@+id/library_app"
-        android:text="@string/library_app"/>
-
-    <Button
-        style="@style/buttons"
-        android:id="@+id/build_it_bigger"
-        android:text="@string/build_it_bigger"/>
-
-    <Button
-        style="@style/buttons"
-        android:id="@+id/bacon_reader"
-        android:text="@string/bacon_reader"/>
-
-    <Button
-        style="@style/buttons"
-        android:id="@+id/capstone"
-        android:text="@string/capstone"
-        android:background="@color/capstone"/>
+        <TextView
+            android:text="@string/my_nanodegree_apps"
+            android:layout_centerInParent="true"
+            android:layout_alignParentTop="true"
+            android:textColor="@android:color/black"
+            android:textSize="26sp"
+            android:layout_width="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_height="wrap_content"/>
 
 
-</LinearLayout>
+        <Button
+            style="@style/buttons"
+            android:id="@+id/spotify_streamer"
+            android:text="@string/spotify_streamer"/>
+
+        <Button
+            style="@style/buttons"
+            android:id="@+id/scores_app"
+            android:text="@string/scores_app"/>
+
+        <Button
+            style="@style/buttons"
+            android:id="@+id/library_app"
+            android:text="@string/library_app"/>
+
+        <Button
+            style="@style/buttons"
+            android:id="@+id/build_it_bigger"
+            android:text="@string/build_it_bigger"/>
+
+        <Button
+            style="@style/buttons"
+            android:id="@+id/bacon_reader"
+            android:text="@string/bacon_reader"/>
+
+        <Button
+            style="@style/buttons"
+            android:id="@+id/capstone"
+            android:text="@string/capstone"
+            android:background="@color/capstone"/>
+
+
+    </LinearLayout>
+
+</ScrollView>
 
